--- a/index.html
+++ b/index.html
@@ -1,43 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <script src="assets/js/script.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
-</head>
-<body class="bg-dark text-white">
-    <div class="container" style="background-color: #013D5F;">
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-              <img src="assets/img/logo.jpeg" alt="logo" height="70px" class="rounded-circle">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active px-5 text-white" aria-current="page" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white" href="addProduct.html">Aggiungi Prodotti</a>
-                  </li>
-                </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn text-black bg-white" type="submit">Search</button>
-                </form>
-              </div>
-            </div>
-          </nav>
-          <main style="height: 100dvh;">
-            <div id="productContainer" class="row justify-content-center py-5"></div>
-        </main>
-        <footer>
-        </footer>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+  </head>
+  <body class="bg-dark text-white">
+    <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modifica prodotto</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body text-black">
+        <div class="form-group">
+          <label for="productName">Nome Prodotto</label>
+          <input type="text" class="form-control" id="productName" required />
+        </div>
+        <div class="form-group has-validation">
+          <label for="productDescription">Descrizione Prodotto</label>
+          <input
+            type="text"
+            class="form-control"
+            id="productDescription"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="productBrand">Brand Prodotto</label>
+          <input
+            type="text"
+            class="form-control"
+            id="productBrand"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="productImageUrl">URL Immagine Prodotto</label>
+          <input
+            type="text"
+            class="form-control"
+            id="productImageUrl"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="productPrice">Prezzo Prodotto</label>
+          <input
+            type="number"
+            class="form-control"
+            id="productPrice"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="optionalParams">Parametro Opzionale</label>
+          <input type="text" class="form-control" id="optionalParams" />
+        </div>
+        <div class="invalid-feedback">
+          Please select a valid state.
+        </div>
+        <!-- Aggiungi qui altri campi per i parametri obbligatori e facoltativi -->
+        <button type="submit" class="btn btn-success mt-3">
+          Modifica Prodotto
+        </button>
+        <button type="reset" class="btn btn-danger mt-3" onclick="resetForm()">
+          Reset
+        </button>
+      </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
+  </div>
+</div>
+    <div class="container" style="background-color: #013d5f">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <img
+            src="assets/img/logo.jpeg"
+            alt="logo"
+            height="70px"
+            class="rounded-circle"
+          />
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  class="nav-link active px-5 text-white"
+                  aria-current="page"
+                  href="index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="addProduct.html"
+                  >Aggiungi Prodotti</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <main style="height: 100dvh">
+        <div
+          id="productContainer"
+          class="row justify-content-center py-5"
+        ></div>
+      </main>
+      <footer></footer>
+    </div>
+    <!-- Modal -->
+<div class="modal fade" id="exampleModalOne" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
