--- a/addProduct.html
+++ b/addProduct.html
@@ -100,14 +100,16 @@
             <label for="optionalParams">Parametro Opzionale</label>
             <input type="text" class="form-control" id="optionalParams" />
           </div>
-          <div class="invalid-feedback">
-            Please select a valid state.
-          </div>
+          <div class="invalid-feedback">Please select a valid state.</div>
           <!-- Aggiungi qui altri campi per i parametri obbligatori e facoltativi -->
           <button type="submit" class="btn btn-success mt-3">
             Crea prodotto
           </button>
-          <button type="reset" class="btn btn-danger mt-3" onclick="resetForm()">
+          <button
+            type="reset"
+            class="btn btn-danger mt-3"
+            onclick="resetForm()"
+          >
             Reset
           </button>
         </form>
