--- a/index.html
+++ b/index.html
@@ -83,12 +83,7 @@
                 />
               </div>
               <div class="form-group">
-                <label for="optionalParams">Parametro Opzionale</label>
-                <input
-                  type="text"
-                  id="optionalParamsEdit"
-                  placeholder="Optional Params"
-                />
+                <input type="hidden" id="productId"/>
               </div>
               <div class="invalid-feedback">Please select a valid state.</div>
               <button type="submit" class="btn btn-success mt-3">
@@ -115,7 +110,7 @@
         </div>
       </div>
     </div>
-    <div class="container" style="background-color: #013d5f">
+    <div class="container" style="background-color: #013d5f;">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <img
@@ -154,11 +149,8 @@
           </div>
         </div>
       </nav>
-      <main style="height: 100dvh">
-        <div
-          id="productContainer"
-          class="row justify-content-center py-5"
-        ></div>
+      <main style="height: 100%">
+        <div id="productContainer" class="row justify-content-center py-5"></div>
       </main>
       <footer></footer>
     </div>
